--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
